# TopoVelo

./: .gitignore  README.md  README.rst  pyproject.toml  setup.cfg  setup.py
docs/: requirements.txt
docs/source/: conf.py  example.rst  index.rst  intro.rst  topovelo.analysis.rst  topovelo.model.rst  topovelo.rst  topovelo_lite.rst
graphvelovae/: __init__.py
graphvelovae/model/: model_util.py
graphvelovae/velovae.egg-info/: requires.txt
notebooks/: debug.ipynb  stereo-seq-embryo-d12-parts.ipynb
notebooks/real/: slide-seq-adult-cortex.ipynb  stereo-seq-gut-E13.5.ipynb  stereo-seq-lung-E13.5.ipynb
notebooks/simulation/: bilinear.ipynb  multiradial.ipynb  simulation.ipynb
notebooks/tutorial/: evaluation.ipynb  plotting.ipynb  train.ipynb
topovelo/: __init__.py  plotting.py  preprocessing.py
topovelo/analysis/: __init__.py  evaluation.py  evaluation_util.py  perf_logger.py  plot_config.py  velocity_util.py
topovelo/model/: __init__.py  brode.py  model_profiler.py  model_util.py  training_data.py  transition_graph.py  vae.py  vanilla_vae.py  velocity.py
topovelo/scvelo_preprocessing/: moments.py  neighbors.py  settings.py
topovelo/simulation/: __init__.py  rna.py  sim_data.py  spatial.py  utils.py
topovelo/velovae.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
