[metadata]
name = topovelo
version = 0.0.1
author = Yichen Gu
author_email = gyichen@umich.edu
description = Topological Velocity Inference from Single-cell Transcriptomic Data
long_description = file: README.rst
url = https://github.com/welch-lab/TopoVelo.git
keywords =
    spatial transcriptomics
    RNA velocity
    single-cell RNA
    graph neural network
license = BSD 3-Clause License
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Machine-Learning
    Topic :: Scientific/Engineering :: Visualization

[options]
package_dir = 
    = ./
package = find:
install_requires  = 
    anndata>=0.8.0
    hnswlib>=0.6.2
    igraph>=0.10.4
    loess>=2.1.2
    matplotlib>=3.3.0
    memory_profiler
    numba>=0.41.0
    numpy>=1.17
    pandas>=0.23
    pynndescent>=0.5.7
    scanpy>=1.5
    scikit-learn>=0.20
    scipy>=1.13.0
    scvelo>=0.2.3, <=0.2.5
    seaborn>=0.10.0
    torch>=1.8.0
    torch-geometric>=2.0.4
    tqdm<=4.62.3
    umap-learn>=0.3.10
    
    
    
    
    

[options.extras_require]
default = 
    torch==1.13.1+cu117
    torch-geometric==2.3.0
    anndata==0.8.0
    matplotlib==3.5.2
    numba==0.56.4
    pandas==1.5.3
    scipy==1.11.4
    scikit-learn==1.4.0
    scvelo==0.2.5

[options.packages.find]
where = ./
exclude =
    docs
    notebooks
    Rscript
    tests
    others
    go